--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <div class="col-lg-4  text-center">
                     <h1 class="display-5 lh-1 mb-3 " style="color: #916c9f;">宇 漩 </h1>
                     <h4 class="alyssa">Alyssa</h4>
-                    <p class="lead" style="color: #76577e;">自我介紹</p>
+                    <p class="lead" style="color: #76577e;">Hi~這是我的作品集網站，正在努力更新中~請多多指教～</p>
                     
                   </div>
                 </div>
