--- a/naturedesign.html
+++ b/naturedesign.html
@@ -75,7 +75,7 @@
           <div class="row justify-content-center py-5"  style="letter-spacing: 2px">
             <div class="col-lg-8  ">
               <div class="ratio ratio-16x9">
-                <iframe src="https://youtu.be/tw1S-gyXAUE" title="YouTube video" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/tw1S-gyXAUE" title="YouTube video" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-lg-8 col-sm-8 pt-4">
