--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
          <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 pb-5">
           <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url(./images/YOTTAPNG/intro.2-1.png);">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url(./image2/nature/nature2-1.webp);">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <div>
                   <a href="./nature.html" class="link-light link-underline link-underline-opacity-0 link-opacity-75-hover">
