--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <div>
                   <a href="./flower.html" class="link-light link-underline link-underline-opacity-0 link-opacity-75-hover">
-                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-shadow-2">花</h3>
-                    <h3 class="display-6 lh-1 fw-bold text-shadow-2">E-COMMERCE</h3>
+                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-shadow-2">花 購物平台</h3>
+                    <h3 class="display-6 lh-1 fw-bold text-shadow-2">品牌企劃-網站-APP</h3>
                   </a>
                 </div>
                 
@@ -251,8 +251,8 @@
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <div>
                   <a href="./bubble.html" class="link-light link-underline link-underline-opacity-0 link-opacity-75-hover">
-                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-shadow-2">BUBBLE</h3>
-                    <h3 class="display-6 lh-1 fw-bold text-shadow-2">APP</h3>
+                    <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-shadow-2">BUBBLE 串流影音</h3>
+                    <h3 class="display-6 lh-1 fw-bold text-shadow-2">品牌企劃-APP</h3>
                   </a>
                 </div>
                 
