--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     <main style="background-color: #000">
         <!-- Hero -->
-        <section id="hero" class="gradient-background">
+        <section id="hero" style="background-color: #E6CBEF;">
             <div class="container col-xxl-8 px-4 py-3">
                 <div class="row flex-lg-row-reverse align-items-center g-3 py-3">
                   <div class="col-12 col-sm-12 col-lg-8 d-flex justify-content-center">
