--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </div>
     
           <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url(./images/YOTTAPNG/class3-3.png);">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url(./bubble.png);">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <div>
                   <a href="./bubble.html" class="link-light link-underline link-underline-opacity-0 link-opacity-75-hover">
