--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
               <div class="feature col ">
                 <div class="col-lg-10 ">
-                    <img src="./images/MEME.jpg" class=" img-fluid rounded-5 " alt="me" >
+                    <img src="./images/mee.png" class=" img-fluid rounded-5 " alt="me" >
                     
                 </div>
               </div>
