--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <div class="col-lg-4  text-center">
                     <h1 class="display-5 lh-1 mb-3 " style="color: #916c9f;">宇 漩 </h1>
                     <h4 class="alyssa">Alyssa</h4>
-                        <p class="text-start" style="color: #76577e;font-size: large;font-weight: 300;">Hi~我是一名活潑ㄎㄧㄤ朗的UIUX設計師，這是我寫的作品集網站，目前以放UIUX作品為主，會持續更新藝術與平面設計、動畫類的作品，請多多指教～對了，可以試試把鼠標移動到右邊的兔兔上喔！</p>
+                        <p class="text-start" style="color: #76577e;font-size: large;font-weight: 300;">Hi~我是一名熱愛學習的UIUX設計師，這是我寫的作品集網站，目前以放UIUX作品為主，會持續更新藝術與平面設計、動畫類的作品，請多多指教～對了，可以試試把鼠標移動到右邊的兔兔上喔！</p>
                     
                   </div>
                 </div>
