--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Menu -->
-    <nav class="navbar navbar-expand-lg fixed-top px-3 py-3 " aria-label="Fifth navbar example" style="background-color: #99d5c3;">
+    <nav class="navbar navbar-expand-lg fixed-top px-3 py-3 " aria-label="Fifth navbar example" style="background-color: #B5D6CC;">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html" style="color: #ffffff;letter-spacing: 1px;"><img src="./images/pixilart-drawing.png" class="img-fluid" style="height: 40px; width: 40px;"></a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,9 +69,9 @@
     
     <main style="background-color: #000">
         <!-- Hero -->        
-        <div id="hero" class=" p-4 mb-4 col-12 " style="background-color: #99d5c3; height: 1000px;" >
+        <div id="hero" class=" p-4 mb-4 col-12 " style="background-color: #B5D6CC; height: 1000px;" >
           <div class="position-absolute z-0 col-12 p-4 ">
-            <iframe src='https://my.spline.design/untitled-d26a0141d8d9b477fc59f9b292999a80/' style='width: 100%; height: 800px;' frameborder='0' ></iframe>
+            <iframe src='https://my.spline.design/untitled-d26a0141d8d9b477fc59f9b292999a80/' style='width: 90%; height: 800px;' frameborder='0' ></iframe>
           </div>
           <div class="position-absolute z-1 col-lg-4 col-sm-12 px-4" style="top: 50%; left: 25%; transform: translate(-25%, -25%);" >
             <h1 class="display-4 lh-2 fw-light"  style="color: #d6fffc;font-family: cursive;" >Alyssa</h1>
